# tf-client-go-test-2

./: .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  Config.cmake  README.md  build.gradle  build.sh  crate.toml  go.mod  index.js  lib.go  mod.go  mono.csproj  ossrh.gradle  package.json  proto.sh  publish.sh  setup.py  update.sh
cpp/tensorflow/core/example/: example.pb.cc  example.pb.h  feature.pb.cc  feature.pb.h
cpp/tensorflow/core/framework/: allocation_description.pb.cc  allocation_description.pb.h  attr_value.pb.cc  attr_value.pb.h  cost_graph.pb.cc  cost_graph.pb.h  function.pb.cc  function.pb.h  graph.pb.cc  graph.pb.h  node_def.pb.cc  node_def.pb.h  op_def.pb.cc  op_def.pb.h  resource_handle.pb.cc  resource_handle.pb.h  step_stats.pb.cc  step_stats.pb.h  tensor.pb.cc  tensor.pb.h  tensor_description.pb.cc  tensor_description.pb.h  tensor_shape.pb.cc  tensor_shape.pb.h  types.pb.h  variable.pb.cc  variable.pb.h  versions.pb.cc  versions.pb.h
cpp/tensorflow/core/lib/core/: error_codes.pb.cc  error_codes.pb.h
cpp/tensorflow/core/protobuf/: cluster.pb.cc  cluster.pb.h  config.pb.cc  config.pb.h  debug.pb.cc  debug.pb.h  error_codes.pb.cc  error_codes.pb.h  meta_graph.pb.cc  meta_graph.pb.h  named_tensor.pb.cc  named_tensor.pb.h  rewriter_config.pb.cc  rewriter_config.pb.h  saved_object_graph.pb.cc  saved_object_graph.pb.h  saver.pb.cc  saver.pb.h  struct.pb.cc  struct.pb.h  trackable_object_graph.pb.cc  trackable_object_graph.pb.h  verifier_config.pb.cc  verifier_config.pb.h
cpp/tensorflow_serving/apis/: classification.pb.cc  classification.pb.h  get_model_metadata.pb.cc  get_model_metadata.pb.h  get_model_status.pb.cc  get_model_status.pb.h  inference.pb.cc  inference.pb.h  input.pb.cc  input.pb.h  model.pb.cc  model.pb.h  model_management.pb.cc  model_management.pb.h  model_service.grpc.pb.cc  model_service.grpc.pb.h  model_service.pb.cc  model_service.pb.h  predict.pb.cc  predict.pb.h  prediction_service.grpc.pb.cc  prediction_service.grpc.pb.h  prediction_service.pb.h  regression.pb.cc  regression.pb.h  session_service.grpc.pb.cc  session_service.grpc.pb.h  session_service.pb.cc  session_service.pb.h
cpp/tensorflow_serving/config/: log_collector_config.pb.cc  log_collector_config.pb.h  logging_config.pb.cc  logging_config.pb.h  model_server_config.pb.cc  model_server_config.pb.h
cpp/tensorflow_serving/sources/storage_path/: file_system_storage_path_source.pb.cc  file_system_storage_path_source.pb.h
cpp/tensorflow_serving/util/: status.pb.cc  status.pb.h
csharp/: Config.cs  ErrorCodes.cs  Feature.cs  MetaGraph.cs  ModelServerConfig.cs  ModelService.cs  ModelServiceGrpc.cs  Predict.cs  PredictionService.cs  PredictionServiceGrpc.cs  RewriterConfig.cs  SessionService.cs  SessionServiceGrpc.cs  Status.cs  Struct.cs  Variable.cs  VerifierConfig.cs
csharp/Tensorflow/: Example.cs  NamedTensor.cs
csharp/Tensorflow/Error/: ErrorCodes.cs
csharp/Tensorflow/Serving/: Classification.cs  FileSystemStoragePathSource.cs  GetModelMetadata.cs  GetModelStatus.cs  Inference.cs  Input.cs  LogCollectorConfig.cs  LoggingConfig.cs  Model.cs  ModelManagement.cs  Regression.cs  Status.cs
go/: go.mod  lib.go
go/tensorflow/: go.mod
go/tensorflow/core/example/: example.pb.go  feature.pb.go
go/tensorflow/core/framework/: allocation_description.pb.go  attr_value.pb.go  cost_graph.pb.go  function.pb.go  graph.pb.go  node_def.pb.go  op_def.pb.go  resource_handle.pb.go  step_stats.pb.go  tensor.pb.go  tensor_description.pb.go  tensor_shape.pb.go  types.pb.go  variable.pb.go  versions.pb.go
go/tensorflow/core/lib/core/: error_codes.pb.go
go/tensorflow/core/protobuf/: cluster.pb.go  config.pb.go  debug.pb.go  error_codes.pb.go  meta_graph.pb.go  named_tensor.pb.go  rewriter_config.pb.go  saved_object_graph.pb.go  saver.pb.go  struct.pb.go  verifier_config.pb.go
go/tensorflow_serving/: go.mod
go/tensorflow_serving/apis/: get_model_metadata.pb.go  get_model_status.pb.go  input.pb.go  model_management.pb.go  predict.pb.go  session_service.pb.go
go/tensorflow_serving/config/: model_server_config.pb.go
go/tensorflow_serving/util/: status.pb.go
gradle/: cmake.gradle  golang.gradle  grpc.gradle  java.gradle  mono.gradle  node.gradle  ossrh.gradle  rust.gradle  wheel.gradle
java/org/tensorflow/framework/: AttrValue.java  ConfigProto.java  ConfigProtoOrBuilder.java  ConfigProtos.java  ErrorCodesProtos.java  FunctionDef.java  FunctionDefOrBuilder.java  FunctionProtos.java  MetaGraphDef.java  MetaGraphProtos.java  NodeProto.java  OpDefProtos.java  ResourceHandle.java  ResourceHandleProto.java  RewriterConfig.java  RewriterConfigOrBuilder.java  RewriterConfigProtos.java  StepStatsProtos.java  VariableProtos.java  VerifierConfigProtos.java
java/tensorflow/: SavedObjectGraphOuterClass.java  Struct.java  TrackableObjectGraphOuterClass.java
java/tensorflow/serving/: ModelServiceGrpc.java  PredictionServiceGrpc.java  SessionServiceGrpc.java
rust/: allocation_description.rs  attr_value.rs  classification.rs  cluster.rs  config.rs  cost_graph.rs  debug.rs  error_codes.rs  example.rs  feature.rs  file_system_storage_path_source.rs  function.rs  get_model_metadata.rs  get_model_status.rs  graph.rs  inference.rs  input.rs  lib.rs  log_collector_config.rs  logging_config.rs  meta_graph.rs  model.rs  model_management.rs  model_server_config.rs  model_service.rs  model_service_grpc.rs  named_tensor.rs  node_def.rs  op_def.rs  predict.rs  prediction_service.rs  prediction_service_grpc.rs  regression.rs  resource_handle.rs  rewriter_config.rs  saved_object_graph.rs  saver.rs  session_service.rs  session_service_grpc.rs  status.rs  (+10 more)
